--- a/vanillatweaks/tweaks.html
+++ b/vanillatweaks/tweaks.html
@@ -53,267 +53,14 @@
     <!--Features-->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing sitting on slabs and stairs">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="slab_stairs_sit">
-                                    <h4>Sit on stairs and slabs</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Sit on slabs and stairs by right clicking with an empty hand.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing sign editing">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="sign_edit">
-                                    <h4>Sign editing</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        You can now right-click already placed signs to edit them.
-                                        <br>Shift+right-clicking already placed signs clears them.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing movable mob spawners">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="movable_spawners">
-                                    <h4>Mob Spawners can be silk touched</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Mob Spawners drop themselves when you use silk touch.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing various new things in creative tab">
-                            </div>
-                            <meta name="viewport" content="width=device-width, initial-scale=1">
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="new_items_in_tabs">
-                                    <h4>Dragon eggs & Command blocks in creative tab</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Command blocks can be found in the redstone creative tab.
-                                        <br> Dragon eggs can be found in the decorations tab.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing renamed buttons">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="renamed_buttons">
-                                    <h4>Buttons are named according to their material</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        <br>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing higher level potion/enchanting roman numerals">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="potion_enchanting_level_high">
-                                    <h4>Higher potion and enchanting levels</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Potion and enchantment level roman numerals now are localized up to level 255.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing hoe acting as a sickle">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="hoe_sickle">
-                                    <h4>Hoe Harvesting</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Breaking grass or crops with a hoe will break a 3x3 of them. A Diamond Hoe will break a 5x5 instead.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Quick Armor Swapping">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="quick_armor_swapping">
-                                    <h4>Quick Armor Swapping</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Right clicking an armor stand while sneaking will swap all armor quickly.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing tnt next to lava">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="tnt_lava">
-                                    <h4>TNT placed next to lava will ignite itelf</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        <br>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing fire arrow setting block on fire">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="fire_arrow_block">
-                                    <h4>Fire arrows set block on fire</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Fire arrows when hit on block sets the block on fire.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing sponges being squished">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="sponge_squising">
-                                    <h4>Sponges can squished</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Wet sponges on being squished set adjacent block as water if it's air.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="col-12" id="card-slot">
             </div>
         </div>
     </div>
+    <script type="text/javascript " src="../scripts/features.js "></script>
+    <script>
+        loadModule("tweaks")
+    </script>
 </body>
 
 </html>
