--- a/vanillatweaks/world.html
+++ b/vanillatweaks/world.html
@@ -53,102 +53,14 @@
     <!--Features-->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing less dangerous nether">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="less_dangerous_nether">
-                                    <h4>Less dangerous nether</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Nether is Less Dangerous as there are no Lava Pockets.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing realistic predator/prey relationship">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="realistic_relationship">
-                                    <h4>Realistic predator/prey relationships!</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        When ocelots kill chickens, the chickens won't drop meat! Same for wolves and sheep!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing automatic seed planting">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="auto_seed_planting">
-                                    <h4>Automatic seed plating</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Seeds will plant themselves after a (randomly-determined) couple of seconds delay. Farms can now be more easily automated!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing sponges drying in nether">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="sponge_nether_dry">
-                                    <h4>Sponges dry in nether</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        Wet sponges when placed dries and becomes a sponge block.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12" id="card-slot">
             </div>
         </div>
     </div>
+    <script type="text/javascript " src="../scripts/features.js "></script>
+    <script>
+        loadModule("world")
+    </script>
 </body>
 
 </html>
