--- a/vanillatweaks/enchanting.html
+++ b/vanillatweaks/enchanting.html
@@ -53,154 +53,14 @@
     <!--Features-->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="../assets/vanillatweaks/enchanting/hops_nimble.png" alt="Picture representing Nimble and hops">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="nimble_and_hops">
-                                    <h4>Nimble and hops</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        These enchantments go on your boots, and can go all the way up to level 3. Each level adds a bit to your movement speed and jump height, respectively.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Vigor">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="vigor">
-                                    <h4>Vigor</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your chestplate. It will grant the wearer a one heart max health increase per enchantment level, maximum of 3.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Veteran">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="veteran">
-                                    <h4>Veteran</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your head, instantly increasing your knowledge! It will attract all experience orbs in a 32-block radius towards you!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Blazing">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="blazing">
-                                    <h4>Blazing</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your pickaxe. Automatically smelts everything the block drops.
-                                        <br> If you have fortune on your item, it will increase the stack size of the drops accordingly - but not for drops that are blocks themselves.
-                                        <br>It cannot be applied with Silk Touch, obviously. Only available at level 1.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="" alt="Picture representing Siphon">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="siphon">
-                                    <h4>Siphon</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your pickaxe. All mined block drops instantly go into your inventory!
-                                        <br>You won't have to deal with a pesky zombie or friend stealing your freshly-mined diamonds again!
-                                        <br>It is friendly with Silk Touch or Blazing.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card bg-light">
-                    <div class="card-body p-0">
-                        <div class="row no-gutters">
-                            <div class="image-region col-md-3">
-                                <!-- image -->
-                                <img src="../assets/vanillatweaks/enchanting/homing.png" alt="Picture representing Homing">
-                            </div>
-
-                            <div class="text-region col-md-9 p-4">
-                                <!-- title -->
-                                <a name="homing">
-                                    <h4>Homing</h4>
-                                </a>
-
-                                <div class="description">
-                                    <p>
-                                        This enchantment goes on your bow. Your arrows will aim right at your target.
-                                        <br>Level 1 works for entities 32 blocks away, level 2 works for entities 64 blocks away, and level 3 128 blocks away.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12" id="card-slot">
             </div>
         </div>
     </div>
-
+    <script type="text/javascript " src="../scripts/features.js "></script>
+    <script>
+        loadModule("enchanting")
+    </script>
 </body>
 
 </html>
