--- a/vanillatweaks/world.html
+++ b/vanillatweaks/world.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <nav class="nav nav-pills nav-fill justify-content-center">
+         <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link home" href="home.html">Home</a>
         <a class="nav-link crafting" href="crafting.html">Crafting</a>
         <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript " src="../scripts/features.js "></script>
+    <script type="text/javascript " src="../scripts/modules.js"></script>
     <script>
         loadModule("world")
     </script>
