--- a/vanillatweaks/crafting.html
+++ b/vanillatweaks/crafting.html
@@ -37,18 +37,18 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 mt-4 mb-4 text-center">
-                <h1 class="display-1" id="title">VanillaTweaks</h1>
+                <h1 class="display-1" id="title">VanillaTweaks</h1> 
             </div>
         </div>
     </div>
-    <nav class="nav nav-pills nav-fill justify-content-center">
+    <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link home" href="home.html">Home</a>
         <a class="nav-link crafting active" href="crafting.html">Crafting</a>
         <a class="nav-link enchanting" href="enchanting.html">Enchanting</a>
         <a class="nav-link loot" href="loot.html">Loot</a>
         <a class="nav-link world" href="world.html">World</a>
         <a class="nav-link tweaks" href="tweaks.html">Tweaks</a>
-        <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a>
+        <a class="nav-link upcoming disabled" href="upcoming.html">Upcoming</a> 
     </nav>
     <!--Features-->
     <div class="container">
@@ -56,7 +56,7 @@
             <div class="col-12" id="card-slot">
             </div>
         </div>
-        <script type="text/javascript " src="../scripts/features.js "></script>
+        <script type="text/javascript " src="../scripts/modules.js"></script>
         <script>
             loadModule("crafting")
         </script>
