--- a/pages/mods.html
+++ b/pages/mods.html
@@ -25,10 +25,17 @@
         gtag('config', 'UA-109233842-2');
     </script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
 </head>
@@ -50,21 +57,19 @@
                 <div>
                     <h2>Mods for forge</h2>
                     <div class="card-deck">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body element">
-                                <div class="element" api="https://api.cfwidget.com/minecraft/mc-mods/vanillatweaks">
-                                    <img class="element_img" src="" alt="">
-                                </div>
+                        <div class="card element" style="width: 18rem;">
+                            <div class="card-body element" id="vanillatweaks" api="https://api.cfwidget.com/minecraft/mc-mods/vanillatweaks">
+                                <a class="element_link" href="">
+                                    <img class="element_img" src="" alt="No Connection to CF API">
 
-                                <a href="https://minecraft.curseforge.com/projects/vanillatweaks">
-                                    <h5 class="card-title">VanillaTweaks</h5>
+                                    <h5 class="card-title element_text">?</h5>
+                                    <div class="element_downloads">? downloads</div>
+                                    <p class="card-text">For available features click <a href="../vanillatweaks/home.html">here</a>
+                                    </p>
                                 </a>
-                                <p class="card-text">For available features click <a href="../vanillatweaks/home.html">here</a></p>
                             </div>
-
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -76,15 +81,18 @@
 
                 <ul>
                     <li>
-                        <a href="https://minecraft.curseforge.com/projects/vanillatweaks" , style="color: lightseagreen">VanillaTweaks</a>
+                        <a href="https://minecraft.curseforge.com/projects/vanillatweaks" ,
+                            style="color: lightseagreen">VanillaTweaks</a>
                         <img alt="VanillaTweaks Downloads" src="http://cf.way2muchnoise.eu/vanillatweaks.svg">
                     </li>
                     <p>A mod which aims to improves the vanilla playthrough without being evasive</p>
-                    <li><a href="https://minecraft.curseforge.com/projects/tweakoni" , style="color: lightseagreen">Tweakoni</a>
+                    <li><a href="https://minecraft.curseforge.com/projects/tweakoni" ,
+                            style="color: lightseagreen">Tweakoni</a>
                         <img alt="Tweakoni Downloads" src="http://cf.way2muchnoise.eu/tweakoni.svg">
                         <p>A mod which adds random tweaks to Vanilla suggested by MumboJumbo</p>
                     </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/sbm-jukebox" , style="color: lightseagreen">SBM Jukebox</a>
+                    <li><a href="https://minecraft.curseforge.com/projects/sbm-jukebox" ,
+                            style="color: lightseagreen">SBM Jukebox</a>
                         <img alt="sbm-jukebox Downloads" src="http://cf.way2muchnoise.eu/sbm-jukebox.svg">
                         <p>Adds inventory support for jukebox</p>
                     </li>
@@ -93,15 +101,19 @@
             <li>
                 <h2 style="color:lemonchiffon">Mods made for fabric</h2>
                 <ul>
-                    <li><a href="https://minecraft.curseforge.com/projects/clear-despawn-fabric" , style="color: lightseagreen">ClearDespawn</a>
+                    <li><a href="https://minecraft.curseforge.com/projects/clear-despawn-fabric" ,
+                            style="color: lightseagreen">ClearDespawn</a>
                         <img alt="ClearDespawn Downloads" src="http://cf.way2muchnoise.eu/clear-despawn-fabric.svg">
                         <p>Makes dropped items flash when they're about to despawn. </p>
                     </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" , style="color: lightseagreen">Furnace XP Drop</a>
-                        <img alt="furnace-xp-drop Downloads" src="http://cf.way2muchnoise.eu/furnace-xp-drop-fabric.svg">
+                    <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" ,
+                            style="color: lightseagreen">Furnace XP Drop</a>
+                        <img alt="furnace-xp-drop Downloads"
+                            src="http://cf.way2muchnoise.eu/furnace-xp-drop-fabric.svg">
                         <p>Drops stored xp in a furnace when broken</p>
                     </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/craftingpad-fabric" , style="color: lightseagreen">Crafting Pad</a>
+                    <li><a href="https://minecraft.curseforge.com/projects/craftingpad-fabric" ,
+                            style="color: lightseagreen">Crafting Pad</a>
                         <img alt="CraftingPad Downloads" src="http://cf.way2muchnoise.eu/craftingpad-fabric.svg">
                         <p>Add an item which opens crafting menu</p>
                     </li>
@@ -127,7 +139,7 @@
 
         function httpGetAsync(element, theUrl, callback) {
             var xmlHttp = new XMLHttpRequest();
-            xmlHttp.onreadystatechange = function() {
+            xmlHttp.onreadystatechange = function () {
                 if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
                     callback(element, xmlHttp.responseText);
             }
@@ -141,10 +153,12 @@
             var link = document.querySelectorAll("div#" + element.id + " .element_link");
             var img = document.querySelectorAll("div#" + element.id + " .element_img");
             var obj = JSON.parse(response);
+            console.log(img[0]);
             downloads[0].innerHTML = numberWithCommas(obj.downloads.total) + " Downloads";
             title[0].innerHTML = obj.title;
             link[0].setAttribute("href", obj.urls.curseforge);
             img[0].setAttribute("src", obj.thumbnail.replace("120/120/", "").replace("thumbnails/", ""));
+            console.log(img[0].getAttribute("src"));
         }
 
         function numberWithCommas(x) {
