--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -35,8 +35,10 @@
 </head>
 
 <body>
+    <br>
+    <br>
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
-        <a class="nav-link home" href="index.html">Home</a>
+        <a class="nav-link home" href="../index.html">Home</a>
         <a class="nav-link mods" href="mods.html">My Mods</a>
         <a class="nav-link vanillatweaks" href="../vanillatweaks/home.html">VanillaTweaks</a>
         <a class="nav-link contact active" href="contactme.html">Contact</a>
