--- a/pages/mods.html
+++ b/pages/mods.html
@@ -25,146 +25,131 @@
         gtag('config', 'UA-109233842-2');
     </script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    <br>
+    <br>
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
-        <a class="nav-link home" href="index.html">Home</a>
-        <a class="nav-link mods active" href="mods.html">My Mods</a>
-        <a class="nav-link vanillatweaks" href="../vanillatweaks/home.html">VanillaTweaks</a>
-        <a class="nav-link contact" href="contactme.html">Contact</a>
+        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link active" href="mods.html">My Mods</a>
+        <a class="nav-link" href="../vanillatweaks/home.html">VanillaTweaks</a>
+        <a class="nav-link" href="contactme.html">Contact</a>
     </nav>
-    <br>
-    <br>
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <h1>My Mods</h1>
+                <h2>Mods for forge</h2>
+                <div class="card-deck">
+                    <div class="card">
+                        <div class="card-body element" id="vanillatweaks" api="https://api.cfwidget.com/minecraft/mc-mods/vanillatweaks">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
+                        </div>
+                    </div>
 
-                <div>
-                    <h2>Mods for forge</h2>
-                    <div class="card-deck">
-                        <div class="card element" style="width: 18rem;">
-                            <div class="card-body element" id="vanillatweaks" api="https://api.cfwidget.com/minecraft/mc-mods/vanillatweaks">
-                                <a class="element_link" href="">
-                                    <img class="element_img" src="" alt="No Connection to CF API">
+                    <div class="card">
+                        <div class="card-body element" id="tweakoni" api="https://api.cfwidget.com/minecraft/mc-mods/tweakoni">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
+                        </div>
+                    </div>
 
-                                    <h5 class="card-title element_text">?</h5>
-                                    <div class="element_downloads">? downloads</div>
-                                    <p class="card-text">For available features click <a href="../vanillatweaks/home.html">here</a>
-                                    </p>
-                                </a>
-                            </div>
+                    <div class="card">
+                        <div class="card-body element" id="sbm_jukebox" api="https://api.cfwidget.com/minecraft/mc-mods/sbm-jukebox">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <h2>Mods for fabric</h2>
+                <div class="card-deck">
+
+                    <div class="card">
+                        <div class="card-body element" id="clear-despawn-fabric" api="https://api.cfwidget.com/minecraft/mc-mods/clear-despawn-fabric">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body element" id="furnace-xp-drop-fabric" api="https://api.cfwidget.com/minecraft/mc-mods/furnace-xp-drop-fabric">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body element" id="craftingpad-fabric" api="https://api.cfwidget.com/minecraft/mc-mods/craftingpad-fabric">
+                            <a class="element_link" href="">
+                                <img class="card-img-top element_img" src="" alt="No Connection to CF API">
+                                <h5 class="card-title element_text">?</h5>
+                                <div class="element_downloads card-text">? downloads</div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <main>
-        <ul>
-            <li>
-                <h2 style="color:lemonchiffon">Mods made for forge</h2>
+        <!--Script for pulling img from curse-->
+        <script>
+            Array.from(document.getElementsByClassName("element")).forEach(getDataForElement);
 
-                <ul>
-                    <li>
-                        <a href="https://minecraft.curseforge.com/projects/vanillatweaks" ,
-                            style="color: lightseagreen">VanillaTweaks</a>
-                        <img alt="VanillaTweaks Downloads" src="http://cf.way2muchnoise.eu/vanillatweaks.svg">
-                    </li>
-                    <p>A mod which aims to improves the vanilla playthrough without being evasive</p>
-                    <li><a href="https://minecraft.curseforge.com/projects/tweakoni" ,
-                            style="color: lightseagreen">Tweakoni</a>
-                        <img alt="Tweakoni Downloads" src="http://cf.way2muchnoise.eu/tweakoni.svg">
-                        <p>A mod which adds random tweaks to Vanilla suggested by MumboJumbo</p>
-                    </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/sbm-jukebox" ,
-                            style="color: lightseagreen">SBM Jukebox</a>
-                        <img alt="sbm-jukebox Downloads" src="http://cf.way2muchnoise.eu/sbm-jukebox.svg">
-                        <p>Adds inventory support for jukebox</p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 style="color:lemonchiffon">Mods made for fabric</h2>
-                <ul>
-                    <li><a href="https://minecraft.curseforge.com/projects/clear-despawn-fabric" ,
-                            style="color: lightseagreen">ClearDespawn</a>
-                        <img alt="ClearDespawn Downloads" src="http://cf.way2muchnoise.eu/clear-despawn-fabric.svg">
-                        <p>Makes dropped items flash when they're about to despawn. </p>
-                    </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/furnace-xp-drop-fabric" ,
-                            style="color: lightseagreen">Furnace XP Drop</a>
-                        <img alt="furnace-xp-drop Downloads"
-                            src="http://cf.way2muchnoise.eu/furnace-xp-drop-fabric.svg">
-                        <p>Drops stored xp in a furnace when broken</p>
-                    </li>
-                    <li><a href="https://minecraft.curseforge.com/projects/craftingpad-fabric" ,
-                            style="color: lightseagreen">Crafting Pad</a>
-                        <img alt="CraftingPad Downloads" src="http://cf.way2muchnoise.eu/craftingpad-fabric.svg">
-                        <p>Add an item which opens crafting menu</p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 style="color:lemonchiffon">Mods ported for others </h2>
-                <ul></ul>
-                <p>Will update soon!</p>
-            </li>
-        </ul>
-    </main>
-    <!--Script for pulling img from curse-->
-    <script>
-        Array.from(document.getElementsByClassName("element")).forEach(getDownloadsForElement);
-
-        function getDownloadsForElement(element, index, array) {
-            var id = element.id;
-            if (id != "") {
-                httpGetAsync(element, element.getAttribute("api"), fillInfoForResponse);
+            function getDataForElement(element, index, array) {
+                var id = element.id;
+                if (id != "") {
+                    httpGetAsync(element, element.getAttribute("api"), fillInfoForResponse);
+                }
             }
-        }
 
-        function httpGetAsync(element, theUrl, callback) {
-            var xmlHttp = new XMLHttpRequest();
-            xmlHttp.onreadystatechange = function () {
-                if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
-                    callback(element, xmlHttp.responseText);
+            function httpGetAsync(element, theUrl, callback) {
+                var xmlHttp = new XMLHttpRequest();
+                xmlHttp.onreadystatechange = function() {
+                    if (xmlHttp.readyState == 4 && xmlHttp.status == 200)
+                        callback(element, xmlHttp.responseText);
+                }
+                xmlHttp.open("GET", theUrl, true);
+                xmlHttp.send(null);
             }
-            xmlHttp.open("GET", theUrl, true);
-            xmlHttp.send(null);
-        }
 
-        function fillInfoForResponse(element, response) {
-            var downloads = document.querySelectorAll("div#" + element.id + " .element_downloads");
-            var title = document.querySelectorAll("div#" + element.id + " .element_text");
-            var link = document.querySelectorAll("div#" + element.id + " .element_link");
-            var img = document.querySelectorAll("div#" + element.id + " .element_img");
-            var obj = JSON.parse(response);
-            console.log(img[0]);
-            downloads[0].innerHTML = numberWithCommas(obj.downloads.total) + " Downloads";
-            title[0].innerHTML = obj.title;
-            link[0].setAttribute("href", obj.urls.curseforge);
-            img[0].setAttribute("src", obj.thumbnail.replace("120/120/", "").replace("thumbnails/", ""));
-            console.log(img[0].getAttribute("src"));
-        }
+            function fillInfoForResponse(element, response) {
+                console.log(response);
+                var downloads = document.querySelectorAll("div#" + element.id + " .element_downloads");
+                var title = document.querySelectorAll("div#" + element.id + " .element_text");
+                var link = document.querySelectorAll("div#" + element.id + " .element_link");
+                var img = document.querySelectorAll("div#" + element.id + " .element_img");
+                var obj = JSON.parse(response);
+                downloads[0].innerHTML = numberWithCommas(obj.downloads.total) + " Downloads";
+                title[0].innerHTML = obj.title;
+                link[0].setAttribute("href", obj.urls.curseforge);
+                img[0].setAttribute("src", obj.thumbnail.replace("120/120/", "").replace("thumbnails/", ""));
+            }
 
-        function numberWithCommas(x) {
-            return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-    </script>
-</body>
-
-</html>
+            function numberWithCommas(x) {
+                return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+            }
+        </script>
+        </deckdy
